# khaiii

./: .clabot  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE.md  README.md  Update.md  requirements.txt
.github/: pull_request_template.md
.github/doc/: network.pptx
.github/img/: network.pptx
cmake/: FusedMultiplyAdd.cmake  ae2f_Core.cmake
cmake/Hunter/: config.cmake
doc/: cnn_model.md  corpus.md  errpatch.md  preanal.md  setup.md
doc/img/: network.pptx
docker/: Dockerfile  Dockerfile.centos-7.9.2009  Dockerfile.centos-8.3.2011  Dockerfile.pytorch  Dockerfile.ubuntu  README.md
docker/for-continuumio-anaconda3-image/: Dockerfile
docker/pytorch-0.4.1/: Dockerfile
docker/pytorch-1.1.0/: Dockerfile
docs/: pull_request_template.md
include/khaiii/: KhaiiiApi.hpp  khaiii_api.h  khaiii_dev.h
munjong/: convert_jamo_to_compat.py  detect_sejong_period_error.py  make_patch.py  recover_raw_morph_mismatch.py  recover_wide_quotation.py  remove_sejong_period_error.py
rsc/: Makefile
rsc/lib/: char_align.py  jaso.py  morphs.py  resource.py  sejong_corpus.py  trie.py  vocabulary.py
rsc/src/: base.config.json  base.errpatch.auto  base.errpatch.manual  base.model.pickle  base.model.state  char_align.map  config.json  errpatch.auto  errpatch.manual  large.config.json  large.errpatch.auto  large.errpatch.manual  model.pickle  preanal.auto  preanal.manual  restore.dic  vocab.in  vocab.out  vocab.out.more
src/main/cpp/: main.cpp
src/main/cpp/khaiii/: Config.cpp  Config.hpp  Embed.cpp  Embed.hpp  ErrPatch.cpp  ErrPatch.hpp  KhaiiiImpl.cpp  KhaiiiImpl.hpp  MemMapFile.hpp  Morph.cpp  Morph.hpp  Preanal.cpp  Preanal.hpp  Resource.cpp  Resource.hpp  Restore.cpp  Restore.hpp  Sentence.cpp  Sentence.hpp  Tagger.cpp  Tagger.hpp  Trie.cpp  Trie.hpp  Word.cpp  Word.hpp  khaiii_api.cpp  khaiii_dev.cpp  util.hpp
src/main/cpp/khaiii/nn/: Conv1d.cpp  Conv1d.hpp  Linear.cpp  Linear.hpp  tensor.cpp  tensor.hpp
src/main/python/: MANIFEST.in.in  setup.py.in
src/main/python/khaiii/: __init__.py.in  khaiii.py
src/main/python/khaiii/munjong/: libpatch.py  sejong_corpus.py
src/main/python/khaiii/resource/: char_align.py  jaso.py  morphs.py  resource.py  trie.py  vocabulary.py
src/main/python/khaiii/train/: dataset.py  embedder.py  evaluator.py  models.py  sentence.py  tagger.py  trainer.py
src/test/cpp/: test_main.cpp
src/test/cpp/khaiii/: ErrPatchTest.cpp  KhaiiiApiTest.cpp  KhaiiiApiTest.hpp  KhaiiiDevTest.cpp  PreanalTest.cpp
src/test/python/test_khaiii/: test_khaiii.py
train/: build_vocab.py  eval.py  extract_preanal.py  hd_validate_errpatch.bash  make_vocab.py  pickle_model.py  requirements.txt  split_corpus.py  tag.py  train.py  transform_corpus.py  validate_errpatch.py
